# ztraj

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  build.zig  build.zig.zon
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-03-17-ztraj-phase1.md  2026-03-17-ztraj-phase2-refactor.md  2026-03-18-python-bindings.md  2026-05-20-integrate-xdrfile-io.md
docs/superpowers/specs/: 2026-03-17-ztraj-design.md  2026-03-17-ztraj-phase2-refactor-design.md  2026-05-20-integrate-xdrfile-io-design.md
notebooks/: notebook.py  pyproject.toml
python/: .gitignore  README.md  hatch_build.py  pyproject.toml
python/pyztraj/: .gitignore  __init__.py  _ffi.py  _helpers.py  analysis.py  cli.py  combined.py  core.py  geometry.py  io.py
python/tests/: conftest.py  test_core.py  test_validation.py
src/: c_api.zig  element.zig  main.zig  mmap_reader.zig  neighbor_list.zig  output.zig  root.zig  select.zig  simd.zig  thread_pool.zig  types.zig
src/analysis/: contacts.zig  hbonds.zig  msd.zig  native_contacts.zig  pca.zig  rdf.zig  sasa.zig
src/analysis/dssp/: backbone.zig  beta_sheet.zig  dssp.zig  hbond.zig  helix.zig  types.zig
src/cli/: args.zig  loader.zig  parsers.zig  runners.zig
src/dssp/: accessibility.zig  batch.zig  beta_sheet.zig  cif.zig  dssp.zig  geometry.zig  gzip.zig  hbond.zig  helix.zig  json_parser.zig  json_writer.zig  mmcif_parser.zig  neighbor_list.zig  pdb_parser.zig  residue.zig  root.zig  simd.zig  thread_pool.zig  types.zig
src/dssp/cif/: char_table.zig  tokenizer.zig  types.zig
src/geometry/: angles.zig  center.zig  dihedrals.zig  distances.zig  inertia.zig  pbc.zig  protein_dihedrals.zig  rg.zig  rmsd.zig  rmsf.zig  superpose.zig
src/io/: cif_tokenizer.zig  dcd.zig  gro.zig  mmcif.zig  nc.zig  pdb.zig  prmtop.zig  root.zig  trr.zig  trr_format.zig  xdr.zig  xtc.zig  xtc_format.zig
src/simd/: distance.zig  lee_richards.zig  trig.zig  vec.zig
test_data/: alanine-dipeptide-implicit.prmtop  cpptraj_traj.nc  cpptraj_traj.prmtop  mdcrd.nc
validation/: generate_reference.py  validate.py
validation/reference/: angles.json  center_of_mass.json  dihedrals.json  distances.json  dssp.json  pbc_distances.json  phi_psi.json  rg.json  rmsd_backbone.json  rmsf_ca.json  sasa.json  superpose.json
validation/test_data/: 3tvj_I_R1.xtc  3tvj_I_RMSD.tsv  3tvj_I_RMSF.tsv  3tvj_I_full_R1.xtc  3tvj_I_gyrate.tsv
